test/langtools/tools/javac/records/fields/RecordsCantDeclareFieldModifiersTest.out
RecordsCantDeclareFieldModifiersTest.java:8:14: compiler.err.record.cant.declare.field.modifiers
1 error
